# doc2wdl

./: LICENSE  README.md  argparse2wdl.py  doc2wdl.py  pyproject.toml  requirements-dev.txt  setup.py  task_template.wdl
doc2task/: argparse2wdl.py  cli.py  docopt2wdl.py  docopter.py  tasktree.py  wdlgen.py
doc2wrapper/: __init__.py  argparser.py  cli.py  docopter.py  nfgen.py  wdlgen.py
doc2wrapper/templates/: process_template.nf
scripts/: doc2wdl.py
test/: Makefile  help-cnvkit-antitarget.txt  help-samtools-view.txt
tests/example/: Makefile
tests/test/: Makefile
wdlgen/: argparse2wdl.py  docopt2wdl.py  task_template.wdl  wdlgen.py
