[project]
name = "doc2task"
description = "Generate standard workflow language task definitions from CLI definitions."
readme = "README.rst"
#license = "Apache-2.0"
license = {text = "Apache-2.0"}
authors = [
  {name = "Eric Talevich", email = "me+code@etal.mozmail.com"}
]
maintainers = [
  {name = "Eric Talevich", email = "me+code@etal.mozmail.com"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Healthcare Industry",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: POSIX",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Unix",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]
requires-python = ">=3.7"
dynamic = ["version", "dependencies", "optional-dependencies"]

[project.urls]
homepage = "https://github.com/etal/doc2task"
documentation = "https://github.com/etal/doc2task"
repository = "https://github.com/etal/doc2task"

[project.scripts]
"doc2task" = "doc2task.cli:main"

[build-system]
# Minimum requirements for the build system to execute (PEP 508)
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["doc2task"]

[tool.setuptools.dynamic]
version = {attr = "doc2task._version.__version__"}
dependencies = {file = "requirements.txt"}
optional-dependencies = {test = {file = "requirements-dev.txt"}}

[tool.pytest.ini_options]
testpaths = ["test"]
filterwarnings = ["error"]

[tool.coverage.run]
branch = true
source = ["doc2task"]

[tool.coverage.paths]
source = ["doc2task"]

[tool.mypy]
python_version = "3.10"
files = ["doc2task"]
show_error_codes = true
pretty = true
#strict = true
allow_redefinition = true
disallow_subclassing_any = true
#disallow_untyped_calls = true
#disallow_untyped_defs = true
#disallow_incomplete_defs = true
no_implicit_optional = true
local_partial_types = true
#no_implicit_reexport = true
strict_equality = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
#warn_return_any = true
#warn_unreachable = true

[[tool.mypy.overrides]]
module = [
    "docopt.*",
]
ignore_missing_imports = true
