[project]
name = "doc2wrapper"
description = "Generate standard workflow language wrappers for WDL or Nextflow from CLI definitions."
readme = "README.rst"
#license = "Apache-2.0"
license = {text = "Apache-2.0"}
authors = [
  {name = "Eric Talevich", email = "me+code@etal.mozmail.com"}
]
maintainers = [
  {name = "Eric Talevich", email = "me+code@etal.mozmail.com"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Healthcare Industry",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: POSIX",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Unix",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]
requires-python = ">=3.7"
dynamic = ["version", "dependencies", "optional-dependencies"]

[project.urls]
homepage = "https://github.com/etal/doc2wrapper"
documentation = "https://github.com/etal/doc2wrapper"
repository = "https://github.com/etal/doc2wrapper"

[project.scripts]
"doc2wrapper" = "doc2wrapper.cli:main"

[build-system]
# Minimum requirements for the build system to execute (PEP 508)
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["doc2wrapper"]

[tool.setuptools.dynamic]
version = {attr = "doc2wrapper._version.__version__"}
dependencies = {file = "requirements.txt"}
optional-dependencies = {test = {file = "requirements-dev.txt"}}

[tool.pytest.ini_options]
testpaths = ["test"]
filterwarnings = ["error"]

[tool.coverage.run]
branch = true
source = ["doc2wrapper"]

[tool.coverage.paths]
source = ["doc2wrapper"]

[tool.mypy]
python_version = "3.10"
files = ["doc2wrapper"]
show_error_codes = true
pretty = true
#strict = true
allow_redefinition = true
disallow_subclassing_any = true
#disallow_untyped_calls = true
#disallow_untyped_defs = true
#disallow_incomplete_defs = true
no_implicit_optional = true
local_partial_types = true
#no_implicit_reexport = true
strict_equality = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
#warn_return_any = true
#warn_unreachable = true

[[tool.mypy.overrides]]
module = [
    "docopt.*",
]
ignore_missing_imports = true
